--- a/client/styles.css
+++ b/client/styles.css
@@ -3,3 +3,8 @@
 /* Note: an asteroid image is included in this repo.
 Feel free to use it if you like. */
 
+
+svg .asteroid {
+  height: 50px;
+  width: 50px;
+}
