Added ninja skin, and ninja stars. changed Time colliding to time spent colliding in ms

--- a/client/styles.css
+++ b/client/styles.css
@@ -8,3 +8,7 @@ svg .asteroid {
   height: 50px;
   width: 50px;
 }
+
+.spin {
+  @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } };
+}
